[package]
name        = "pocket-dimension"
version     = "0.1.0"
edition     = "2021"
description = "An interactive container manager with strictly opt-in host integrations."
repository  = "https://github.com/Colonial-Dev/pocket-dimension"
license     = "AGPL-3.0"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
libc = "0.2.152"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.8"
whoami = "1.4.1"

[[bin]]
# This overrides the default name for the executable to something more succint.
name = "pd"
path = "src/main.rs"
